package json updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maggie-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "🧙‍♀️ A magical Express middleware to auto-generate CRUD APIs for Mongoose models with validation, unique keys, and middlewares.",
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
@@ -9,9 +9,76 @@
     "build": "tsc",
     "start": "node dist/server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "express",
+    "mongoose",
+    "crud",
+    "api",
+    "typescript",
+    "joi",
+    "middleware",
+    "rest",
+    "auto-crud",
+    "maggie-api",
+    "nodejs",
+    "backend",
+    "typescript-library",
+    "typescript-express",
+    "express-crud",
+    "mongoose-crud",
+    "auto-rest-api",
+    "dynamic-api",
+    "api-generator",
+    "openapi",
+    "swagger",
+    "model-driven-api",
+    "validation",
+    "request-validation",
+    "api-validation",
+    "joi-validation",
+    "auto-validation",
+    "restful",
+    "json-api",
+    "controller-generator",
+    "schema-validation",
+    "typescript-backend",
+    "express-router",
+    "ts-api",
+    "developer-tools",
+    "boilerplate",
+    "api-boilerplate",
+    "crud-generator",
+    "api-scaffolding",
+    "rapid-development",
+    "productivity",
+    "modular-api",
+    "clean-architecture",
+    "mvc",
+    "mongoose-schema",
+    "typescript-utils",
+    "microservice",
+    "express-middleware",
+    "api-automation",
+    "ts-mongoose",
+    "dynamic-routing",
+    "express-tools",
+    "rest-framework",
+    "fast-api-setup",
+    "backend-generator"
+  ],
+  "author": {
+    "name": "Nagin Banodha",
+    "url": "https://www.linkedin.com/in/nagin-banodha/"
+  },
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/naginbanodha/maggie-api"
+  },
+  "bugs": {
+    "url": "https://github.com/naginbanodha/maggie-api/issues"
+  },
+  "homepage": "https://www.linkedin.com/in/nagin-banodha/",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
