--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "Node",
     "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
+    "declaration": true,
+    "module": "CommonJS",
+    "target": "ES6",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "Node",
+    "strict": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "resolveJsonModule": true,
+    "baseUrl": "./src"
   },
   "include": ["src"]
 }
