--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "maggie-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "🧙‍♀️ A magical Express middleware to auto-generate CRUD APIs for Mongoose models with validation, unique keys, and middlewares.",
   "type": "commonjs",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
@@ -66,7 +68,7 @@
     "backend-generator"
   ],
   "author": {
-    "name": "Nagin Banodha",
+    "name": "Nagin Banodha <naginbanodha@gmail.com>",
     "url": "https://www.linkedin.com/in/nagin-banodha/"
   },
   "license": "ISC",
