--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "ts-node-dev --respawn --transpile-only src/testing.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
