--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "qs": "^6.14.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
