--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maggie-api",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "🧙‍♀️ A magical Express middleware to auto-generate CRUD APIs for Mongoose models with validation, unique keys, and middlewares.",
   "type": "commonjs",
   "main": "dist/index.js",
@@ -72,7 +72,7 @@
     "name": "Nagin Banodha <naginbanodha@gmail.com>",
     "url": "https://www.linkedin.com/in/nagin-banodha/"
   },
-  "license": "ISC",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/NaginB/maggie-api"
